--- a/templates/student/styles.css
+++ b/templates/student/styles.css
@@ -27,15 +27,6 @@ a {
     margin: 0 0 12px 0;
 }
 
-.contact-line .contact-icon {
-    display: inline-block;
-    width: 12px;
-    height: 12px;
-    vertical-align: middle;
-    margin-right: 2px;
-    font-style: normal;
-}
-
 .header-rule {
     border: none;
     border-top: 1px solid #ccc;
